--- a/index.html
+++ b/index.html
@@ -88,11 +88,104 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true" title="Or Call us at<span>  <br><strong>+852 12345678</strong></span>" data-placement="bottom" href="#reserveform">Reserve Table</a>
+                    <a data-toggle="modal" data-target="#reserveModal" role="button" class="btn btn-block nav-link btn-warning">Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group row">
+                                <label class="col-12 col-sm-2 col-form-label" for="number of guests">
+                                    <h6>Number of Guests</h6>
+                                </label>
+                                <div class="col-12 col-sm-10">
+                                    <div class="form-ckeck form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                        <label class="form-check-label" for="inlineRadio1">1</label>
+                                    </div>
+                                    <div class="form-ckeck form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">2</label>
+                                    </div>
+                                    <div class="form-ckeck form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option3">
+                                        <label class="form-check-label" for="inlineRadio3">3</label>
+                                    </div>
+                                    <div class="form-ckeck form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option4">
+                                        <label class="form-check-label" for="inlineRadio4">4</label>
+                                    </div>
+                                    <div class="form-ckeck form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option5">
+                                        <label class="form-check-label" for="inlineRadio5">5</label>
+                                    </div>
+                                    <div class="form-ckeck form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option6">
+                                        <label class="form-check-label" for="inlineRadio6">6</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group row">
+                                <label class="col-12 col-sm-2 col-form-label" for="Section">
+                                    <h6>Section</h6>
+                                </label>
+                                <div class="col-12 col-sm-10">
+                                    <div class="btn-group-toggle" data-toggle="buttons">
+                                        <label class="btn btn-success active">
+                                            <input type="checkbox" checked autocomplete="off"> Non-smoking
+                                        </label>
+                                        <label class="btn btn-danger active">
+                                            <input type="checkbox" checked autocomplete="off">Smoking
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group row">
+                                <label class="col-12 col-sm-2 col-form-label" for="date and time">
+                                    <h6>Date and Time</h6>
+                                </label>
+                                <div class="col-12 col-sm-4">
+                                    <input class="form-control" type="text" value="Date" id="date-input">
+                                </div>
+                                <div class="col-12 col-sm-4">
+                                    <input class="form-control" type="teext" value="Time" id="time-input">
+                                </div>
+                            </div>
+                             </div>
+                            <div class="form-row">
+                                <div class="form-group row">
+                                    <div class="col-12 col-sm-2"></div>
+                                     <div class="col-2">
+                                        <button type="button" class="btn btn-secondary">Cancel</button>
+                                    </div>
+                                     <div class="offset-2"></div>
+                                    <div class="col-2">
+                                       <button type="button" class="btn btn-primary">Reserve</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                       
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="row row-content">
@@ -144,65 +237,7 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content">
-            <div class="col-12 col-sm-8 offset-sm-2">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">
-                        Reserve a Table
-                    </h3>
-                    <div class="card-body" id="reserve-table">
-                        <div class="form-group row">
-                            <label class="col-12 col-sm-2 col-form-label" for="number of guests">
-                                <h6>Number of Guests</h6>
-                            </label>
-                            <div class="col-12 col-sm-10">
-                                <div class="form-ckeck form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                                    <label class="form-check-label" for="inlineRadio1">1</label>
-                                </div>
-                                <div class="form-ckeck form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option2">
-                                    <label class="form-check-label" for="inlineRadio2">2</label>
-                                </div>
-                                <div class="form-ckeck form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option3">
-                                    <label class="form-check-label" for="inlineRadio3">3</label>
-                                </div>
-                                <div class="form-ckeck form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option4">
-                                    <label class="form-check-label" for="inlineRadio4">4</label>
-                                </div>
-                                <div class="form-ckeck form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option5">
-                                    <label class="form-check-label" for="inlineRadio5">5</label>
-                                </div>
-                                <div class="form-ckeck form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option6">
-                                    <label class="form-check-label" for="inlineRadio6">6</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-12 col-sm-2 col-form-label" for="date and time">
-                                <h6>Date and Time</h6>
-                            </label>
-                            <div class="col-12 col-sm-3">
-                                <input class="form-control" type="text" value="Date" id="date-input">
-                            </div>
-                            <div class="col-12 col-sm-3">
-                                <input class="form-control" type="teext" value="Time" id="time-input">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="offset-2"></div>
-                            <div class="col-2">
-                                <button type="button" class="btn btn-primary">Reserve</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
 
 
         <footer>
