--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <li class="nav-item"><a class="nav-link" href="contactus/contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
-                        <span class="fa fa-sign-in"></span> Login</a>
+                   <span id="login-button"> <a>
+                        <span class="fa fa-sign-in"></span> Login</a></span>
                 </span>
             </div>
         </div>
@@ -45,7 +45,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login </h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close" id="login-close">&times;</button>
                 </div>
                 <div class="modal-body">
                     <form>
@@ -67,7 +67,7 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" id="login-cancel">Cancel</button>
                             <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
                         </div>
                     </form>
@@ -88,7 +88,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a data-toggle="modal" data-target="#reserveModal" role="button" class="btn btn-block nav-link btn-warning">Reserve Table</a>
+                    <span id="reserve-open"><a role="button" class="btn btn-block nav-link btn-warning">Reserve Table</a></span>
                 </div>
             </div>
         </div>
@@ -99,7 +99,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Reserve a Table </h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close" id="reserve-close">&times;</button>
                 </div>
                 <div class="modal-body">
                     <form>
@@ -170,7 +170,7 @@
                             <div class="form-group row">
                                 <div class="col-12 col-sm-2"></div>
                                 <div class="col-2">
-                                    <button type="button" class="btn btn-secondary">Cancel</button>
+                                    <button type="button" class="btn btn-secondary" id="reserve-cancel">Cancel</button>
                                 </div>
                                 <div class="offset-2"></div>
                                 <div class="col-2">
@@ -232,11 +232,11 @@
                         <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                             <span class="carousel-control-next-icon"></span>
                         </a>
-                        
-                            <button class="btn btn-danger btn-sm" id="carouselButton">
-                                <span id="carousel-button-icon" class="fa fa-pause"></span>
-                            </button>
-                       
+
+                        <button class="btn btn-danger btn-sm" id="carouselButton">
+                            <span id="carousel-button-icon" class="fa fa-pause"></span>
+                        </button>
+
 
 
                     </div>
@@ -316,6 +316,26 @@
                     $("#carouselButton").children("span").addClass('fa-pause');
                 }
             });
+            $("#login-button").click(function() {
+                $("#loginModal").modal("show");
+            });
+            $("#login-close").click(function() {
+                $("#loginModal").modal("hide");
+            });
+            $("#login-cancel").click(function() {
+                $("#loginModal").modal("hide");
+            });
+            $("#reserve-open").click(function() {
+                $("#reserveModal").modal("show");
+            });
+            $("#reserve-close").click(function() {
+                $("#reserveModal").modal("hide");
+            });
+            $("#reserve-cancel").click(function() {
+                $("#reserveModal").modal("hide");
+            });
+
+
         });
     </script>
 
